--- a/style.css
+++ b/style.css
@@ -155,3 +155,66 @@ main {
 
 
 /*End of Product Specs Styling*/
+
+/* Begiinning of Contact US */
+
+#inf {
+    width : 80%;
+    margin : 10px auto;
+    box-shadow : 10px 10px 5px #023;
+    border : 4px solid #0ab;
+    border-radius: 12px;
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+#heading{
+    text-align: center;
+    display: inline-block;
+    font-family: 'Righteous', cursive;
+}
+#icon{
+    position: relative;
+    height: 150px;
+}
+title{
+    color: black;
+    height: 100px;
+    margin: auto;
+    border: 2px solid #008dd5;
+    background: #f8f7ff;
+    text-align: center;
+    padding: 1px 10px;
+    font-size: 15px;
+}
+#information {
+    color: #222;
+    border-top: solid #918ef4;
+    border-bottom: solid #918ef4;
+    text-align: center;
+    font-size: 30px;
+}
+#time { 
+    color: #222222;
+    text-align: center;
+    font-size: 20px;
+}
+#address { 
+    color: #222222;
+    text-align: center;
+    font-size: 20px;
+}
+#number { 
+    color: #222222;
+    text-align: center;
+    font-size: 20px;
+}
+#qOD {
+    color: #222;
+    border-top: solid #918ef4;
+    border-bottom: solid #918ef4;
+    text-align: center;
+    font-size: 30px;
+}
+
+/* end of Contact Us */
