--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ main {
 #inf {
     width : 80%;
     margin : 10px auto;
-    box-shadow : 10px 10px 5px #023;
+    box-shadow : 10px 10px 5px white;
     border : 4px solid #0ab;
     border-radius: 12px;
     padding: 10px;
@@ -191,7 +191,7 @@ main {
     height: 150px;
 }
 title{
-    color: black;
+    color: white;
     height: 100px;
     margin: auto;
     border: 2px solid #008dd5;
@@ -201,29 +201,29 @@ title{
     font-size: 15px;
 }
 #information {
-    color: #222;
+    color: white;
     border-top: solid #918ef4;
     border-bottom: solid #918ef4;
     text-align: center;
     font-size: 30px;
 }
 #time { 
-    color: #222222;
+    color: white;
     text-align: center;
     font-size: 20px;
 }
 #address { 
-    color: #222222;
+    color: white;
     text-align: center;
     font-size: 20px;
 }
 #number { 
-    color: #222222;
+    color: white;
     text-align: center;
     font-size: 20px;
 }
 #qOD {
-    color: #222;
+    color: white;
     border-top: solid #918ef4;
     border-bottom: solid #918ef4;
     text-align: center;
