--- a/style.css
+++ b/style.css
@@ -238,9 +238,9 @@ a {
 
 /*End of Product Specs Styling*/
 
-/* Begiinning of Contact US */
+/* Beginning of Contact US */
 
-#inf {
+/* #contact-us #inf {
     width : 80%;
     margin : 10px auto;
     box-shadow : 10px 10px 5px white;
@@ -249,17 +249,17 @@ a {
     padding: 10px;
     font-family: 'Open Sans', sans-serif;
 
-}
-#heading{
+} */
+#contact-us #heading{
     text-align: center;
     display: inline-block;
-    font-family: 'Righteous', cursive;
+    font-family: 'Righteous';
 }
-#icon{
+#contact-us #icon{
     position: relative;
     height: 150px;
 }
-title{
+/* #contact-us title{
     color: white;
     height: 100px;
     margin: auto;
@@ -268,33 +268,33 @@ title{
     text-align: center;
     padding: 1px 10px;
     font-size: 15px;
-}
-#information {
+} */
+#contact-us #information {
     color: white;
-    border-top: solid #918ef4;
-    border-bottom: solid #918ef4;
+    border-top: solid #d72483;
+    border-bottom: solid #d72483;
     text-align: center;
     font-size: 30px;
 }
-#time { 
+#contact-us #time { 
     color: white;
     text-align: center;
     font-size: 20px;
 }
-#address { 
+#contact-us #address { 
     color: white;
     text-align: center;
     font-size: 20px;
 }
-#number { 
+#contact-us #number { 
     color: white;
     text-align: center;
     font-size: 20px;
 }
-#qOD {
+#contact-us #qOD {
     color: white;
-    border-top: solid #918ef4;
-    border-bottom: solid #918ef4;
+    border-top: solid #d72483;
+    border-bottom: solid #d72483;
     text-align: center;
     font-size: 30px;
 }
