--- a/style.css
+++ b/style.css
@@ -343,33 +343,36 @@ margin: auto;
     font-size: 15px;
 } */
 #contact-us #information {
-    color: white;
     border-top: solid #d72483;
     border-bottom: solid #d72483;
     text-align: center;
     font-size: 30px;
 }
 #contact-us #time { 
-    color: white;
     text-align: center;
     font-size: 20px;
 }
 #contact-us #address { 
-    color: white;
     text-align: center;
     font-size: 20px;
 }
 #contact-us #number { 
-    color: white;
     text-align: center;
     font-size: 20px;
 }
 #contact-us #qOD {
-    color: white;
     border-top: solid #d72483;
     border-bottom: solid #d72483;
     text-align: center;
     font-size: 30px;
+}
+
+#contact-us div > blockquote > span.tsofooter.citation > cite::before {
+    color: #eeeeee !important;
+}
+
+#contact-us div > blockquote > span.tsofooter.citation > cite > a {
+    color: #eeeeee !important;
 }
 
 /* end of Contact Us */
